# platform

./: CMakeLists.txt  LICENSE  LICENSE.md  README.md  ztd.platform.pc.in
cmake/: ztd.platform-config.cmake.in
include/ztd/: platform.hpp
include/ztd/platform/: api.hpp  iconv.hpp  version.hpp
include/ztd/platform/encoding_c/: encoding_rs_cpp.hpp
include/ztd/platform/iconv/: iconv.hpp  names.hpp
source/: iconv.cpp
